--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="http://fuelcdn.com/fuelux/2.2/css/fuelux.css" rel="stylesheet" /> 
-	<link href="http://fuelcdn.com/fuelux/2.2/css/fuelux-responsive.css" rel="stylesheet" />
+    <link href="/css/fuelux.css" rel="stylesheet" />	
+	<link href="/css/fuelux-responsive.css" rel="stylesheet" />	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 	<script src="http://fuelcdn.com/fuelux/2.2/loader.min.js" type="text/javascript"></script>
     <link href="/css/docs.css" rel="stylesheet">
