--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -8,11 +8,12 @@
     <meta name="author" content="">
 
 	<!-- Le styles -->
-	<link href="http://fuelcdn.com/fuelux/2.2/css/fuelux.css" rel="stylesheet" />	
-	<link href="http://fuelcdn.com/fuelux/2.2/css/fuelux-responsive.css" rel="stylesheet" />	
+	<link href="/css/fuelux.css" rel="stylesheet" />	
+	<link href="/css/fuelux-responsive.css" rel="stylesheet" />	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 	<script src="http://fuelcdn.com/fuelux/2.2/loader.min.js" type="text/javascript"></script>
     <link href="/css/docs.css" rel="stylesheet">  		 
+    <link href="/css/style.css" rel="stylesheet">  		 
 	<link href="/js/google-code-prettify/prettify.css" rel="stylesheet">	
 	
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -30,12 +31,12 @@
 	<div class="marketing">
 		<div class="content">	  
 			<div class="row">			   				
-				<div class="span7 columns">						
-					{{ content }} 					
-				</div>	
-				<div class="span4 columns">					
+				<div class="span3 columns">					
 					 {% include aboutme.html %}							
 				</div>				
+				<div class="span8 columns">						
+					{{ content }} 					
+				</div>					
 			</div>						
 		</div>			
 	</div>		
