Changing layout css

--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -1,15 +1,17 @@
-<h2>Hello. I'm Eric</h2>
-<p><img src="http://www.gravatar.com/avatar/ca1556da271e3177836fdd55bc926ecd.png" alt="Eric Jones" title="Follow me on Twitter @erjjones"  class="img-rounded floatLeft" />			
-I am a student for life, amateur software engineer, car enthusiast, and wanna be chef.  Most importantly I am a father, husband and a Christian.</p>					
-<p><iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=erjjones&repo=erjjones.github.com&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>&nbsp;<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=erjjones&repo=erjjones.github.com&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe></p>
-<p><a href="https://twitter.com/erjjones" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @erjjones</a></p>
-<p>
-	<ul class="buttons unstyled">
-	  <li><a href="http://github.com/erjjones" rel="me" class="social github" title="Go to github.com/erjjones" target="_blank"></a></li>
-	  <li><a href="http://www.linkedin.com/pub/eric-jones/a/848/1b3" rel="me" class="social linkedin" title="Go to LinkedIn profile" target="_blank"></a></li>
-	  <li><a href="http://www.twitter.com/erjjones" rel="me" class="social twitter" title="Go to twitter.com/erjjones" target="_blank"></a></li>
-	  <li><a href="http://feeds.feedburner.com/github/xmyo" rel="me" class="social rss" title="Go to feedburner erjjones rss feed" target="_blank"></a></li>
-	  <li><a href="https://plus.google.com/u/0/114561259331203581412/posts" rel="me" class="social gplus" title="Go to Google Plus profile" target="_blank"></a></li> 
-	  <li><a href="https://github.com/erjjones/Feedback/issues/new" rel="me" class="social mail" title="Leave feedback for Eric"  target="_blank"></a></li>				
+
+<div class="vertical-center">
+	<p>
+		<img src="../img/harsh_pandya.jpg" alt="Harsh Pandya" title="Follow me on Twitter @hrspandya"  
+		class="img-rounded" />			
+	</p>					
+
+	<h4 class="noBold">Harsh Pandya</h4>
+	<p>Engineer at Ciphercloud</p>
+
+	<ul class="social-nav model-9">
+	  <li><a href="https://twitter.com/hrspandya" class="twitter"><i class="fa fa-twitter"></i></a></li>	
+	  <li><a class="linkedin" href="https://www.linkedin.com/pub/harsh-pandya/13/b3a/941"><i class="fa fa-linkedin"></i></a></li>
+	  <li><a class="github" href="https://hrspandya.github.io"><i class="fa fa-github"></i></a></li>
 	</ul>
-</p>
+
+</div>
