--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -22,9 +22,8 @@
 			 </li>
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-list"></i> Projects <b class="caret"></b></a>
-				<ul class="dropdown-menu">					
-					<li class=""><a href="https://github.com/erjjones/earthjs" rel="tooltip" title="Go to Earth.js on GitHub" target="_blank">Earth.js</a></li>					
-					<li class=""><a href="http://erjjones.github.com/forsale.html" rel="tooltip" title="Go to my For Sale Items">Parting Out the Civic</a></li>
+				<ul class="dropdown-menu">										
+					<li class=""><a href="#" rel="tooltip" title="Projects of Harsh Pandya">Comming Soon</a></li>
 				</ul>
 			 </li>			
 		</ul>		
