fixing image url

--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -1,7 +1,7 @@
 
 <div class="vertical-center">
 	<p>
-		<img src="../img/harsh_pandya.jpg" alt="Harsh Pandya" title="Follow me on Twitter @hrspandya"  
+		<img src="http://hrspandya.github.io/img/harsh_pandya.jpg" alt="Harsh Pandya" title="Follow me on Twitter @hrspandya"  
 		class="img-rounded" />			
 	</p>					
 
