--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -36,6 +36,7 @@
 					 {% include aboutme.html %}							 					
 				</div>				
 				<div class="span8 columns">						
+					 {% include prev_next.html %}							 					
 					{{ content }} 							
 				</div>									
 			</div>						
@@ -51,21 +52,6 @@
     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>    
    	<script src="/js/custom.js" type="text/javascript"></script>	
 
-	<div id="disqus_thread"></div>
-	<script type="text/javascript">
-	    /* * * CONFIGURATION VARIABLES * * */
-	    var disqus_shortname = 'harshpandya';
-	    
-	    /* * * DON'T EDIT BELOW THIS LINE * * */
-	    (function() {
-	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	    })();
-	</script>
-	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-	
-	<!-- Google Analytics -->
 	
   </body>
 </html>
