--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,32 @@
 ---
-layout: default
+layout: layout
 ---
 
 <div class="content">    
 	{% include post_header.html %}
-    {{ content }}		
+    {{ content }}	    
+
+
+    <div class="row">	
+		<div class="span9 columns">    
+			<h2>Comments Section</h2>
+		    <p>Feel free to comment on the post but keep it clean and on topic.</p>	
+			<div id="disqus_thread"></div>
+			<script type="text/javascript">
+			    /* * * CONFIGURATION VARIABLES * * */
+			    var disqus_shortname = 'harshpandya';
+			    
+			    /* * * DON'T EDIT BELOW THIS LINE * * */
+			    (function() {
+			        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+			        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+			        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+			    })();
+			</script>
+			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+		</div>
+	</div>	
 </div>
-    
+  
+
+
