Fixing URLs,   and Tested

--- a/_includes/navigation-original.html
+++ b/_includes/navigation-original.html
@@ -6,19 +6,19 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 	  </a>
-	  <a class="brand" href="http://erjjones.github.com">Eric Jones</a>
+	  <a class="brand" href="http://hrspandya.github.io">Harsh Pandya</a>
 	  <div class="nav-collapse">
 		<ul class="nav">		  
 		  <li class="">
-			<a href="http://erjjones.github.com">Home</a>
+			<a href="http://hrspandya.github.io">Home</a>
 		  </li>
 		  <li class="divider-vertical"></li>
 		  <li class="">
-			<a href="http://github.com/erjjones" target="_blank">GitHub</a>
+			<a href="http://github.com/hrspandya" target="_blank">GitHub</a>
 		  </li>
 		  <li class="divider-vertical"></li>
 		  <li class="">
-			<a href="http://www.delicious.com/erjjones" title="Go to delicious.com/erjjones" target="_blank">Delicious</a>
+			<a href="http://www.delicious.com/hrspandya" title="Go to delicious.com/hrspandya" target="_blank">Delicious</a>
 		  </li>		
 		  <li class="divider-vertical"></li>
 		  <li class="">
@@ -26,7 +26,7 @@
 		  </li>		
 		  <li class="divider-vertical"></li>
 		  <li class="">
-			<a href="http://www.twitter.com/erjjones" title="Go to twitter.com/erjjones" target="_blank">Twitter</a>  
+			<a href="http://www.twitter.com/hrspandya" title="Go to twitter.com/hrspandya" target="_blank">Twitter</a>  
 		  </li>				  			  
 		  <li class="divider-vertical"></li>
 		  <li class="">
@@ -34,18 +34,18 @@
 		  </li>	
 		  <li class="divider-vertical"></li>
 		  <li class="">
-			<a href="http://coderwall.com/erjjones" title="Go to coderwall/erjjones" target="_blank">Coderwall</a>
+			<a href="http://coderwall.com/hrspandya" title="Go to coderwall/hrspandya" target="_blank">Coderwall</a>
 		  </li>	
 		  <li class="divider-vertical"></li>
 		  <li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
 				<ul class="dropdown-menu">					
-					<li class=""><a href="https://github.com/erjjones/earthjs" title="Go to Earth.js on GitHub" target="_blank">Earth.js</a></li>	
+					<li class=""><a href="https://github.com/hrspandya/earthjs" title="Go to Earth.js on GitHub" target="_blank">Earth.js</a></li>	
 				</ul>
 			  </li>		  
 		<li class="divider-vertical"></li>
 		<li class="">
-			<a href="http://erjjones.github.com/forsale.html" title="Go to my items for sale">For Sale</a>
+			<a href="http://hrspandya.github.io/forsale.html" title="Go to my items for sale">For Sale</a>
 		  </li>	
 		</ul>		
 	  </div>
