--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -1,4 +1,4 @@
-
+	
 <div class="row">	
 	<div class="span9 column">
 		<p><h1>{{ page.title }}</h1></p>	
@@ -6,7 +6,7 @@
 </div>		
 <div class="row">	
 	<div class="span3 column">
-		<h5><strong>{{ page.date | date: "%B %e, %Y" }} <small>. {{ page.category }} . <a href="http://erjjones.github.com{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}">Comments</a></small></strong>		
+		<h5><strong>{{ page.date | date: "%B %e, %Y" }} <small>. {{ page.category }} . <a href="http://hrspandya.github.io{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}">Comments</a></small></strong>		
 	</div>		
 	
 </div>
