--- a/_layouts/forsale.html
+++ b/_layouts/forsale.html
@@ -53,7 +53,7 @@
 				  <h2>Terms & Conditions</h2>
 				  <p><ul>
 					<li>I only ship to continental U.S.</li>					
-					<li>When in doubt just <a href="mailto:erjjones@gmail.com">send me a message</a>.</li>					
+					<li>When in doubt just <a href="mailto:hrspandya@gmail.com">send me a message</a>.</li>					
 				  </ul></p>	
 				  <h2>Shipping</h2>				  
 				  <p><ul>
@@ -67,7 +67,7 @@
 				  <h2>Discussion </h2>
 				  <p><ul>
 					<li>For general questions and or comments feel free to use the comment board at the bottom of the page.</li>  
-					<li>Currently posting <a href="http://erjjones.github.com/forsale.html#disqus_thread" data-disqus-identifier="/forsale.html">comments</a> on this thread.</li>
+					<li>Currently posting <a href="http://hrspandya.github.io/forsale.html#disqus_thread" data-disqus-identifier="/forsale.html">comments</a> on this thread.</li>
 				  </ul></p>
 				  <h2>Wanting</h2>
 				  <p><ul>
