--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -11,7 +11,7 @@
 	<ul class="social-nav model-9">
 	  <li><a href="https://twitter.com/hrspandya" class="twitter"><i class="fa fa-twitter"></i></a></li>	
 	  <li><a class="linkedin" href="https://www.linkedin.com/pub/harsh-pandya/13/b3a/941"><i class="fa fa-linkedin"></i></a></li>
-	  <li><a class="github" href="https://hrspandya.github.io"><i class="fa fa-github"></i></a></li>
+	  <li><a class="github" href="https://github.com/hrspandya"><i class="fa fa-github"></i></a></li>
 	</ul>
 
 </div>
